Node-game-deployment/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ID.dkr.ecr.us-east-1.amazonaws.com/web/be:latest
          ports:
            - containerPort: 3000
